--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,23 @@ a.read_link:after {
 	max-width:970px;
 	margin-right:25px;
 	width:100%;
+	position:relative;
+}
+.announce-close{display:none !important;}
+.close{
+	display:none;
+	height: 20px;
+    width: 20px;
+    background-image: url(../images/close.png);
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(
+254deg) brightness(106%) contrast(104%);
 }
 .contact{
 	max-width:400px;
@@ -618,6 +635,7 @@ a.act-btn {
 .product-feature-slider-main {
 	max-width:960px;
     margin:40px auto 0;
+	position:relative;
 	
 }
 .product-feature-slider .slick-slide {
@@ -1085,7 +1103,7 @@ ul.feature-block li {
 
 @media only screen and (max-width:1024px) {
 	/*ipad landscap view*/	
-	
+.close{display:block;}
 .humburger {
     position: relative;
     display: block;
@@ -1198,6 +1216,7 @@ nav.navigation ul li:nth-child(n) {
         background: transparent;
         transition: all 0.2s linear;
 }
+.side-collapse{width:40%; right:-40%;}
 .slide-item .slide-wrapper .slider-header-block {
     max-width: 85%;
 }
@@ -1286,6 +1305,10 @@ p {
 .logo{
 	margin:0;
 }
+.side-collapse {
+    width: 50%;
+    right: -50%;
+}
 .slide-item .slide-wrapper .slider-header-block {
     max-width: 100%;
 }
@@ -1320,6 +1343,17 @@ p {
 }
 .product-slider {
     padding: 0 0 40px;
+}
+.active-link.tab-link:after{display:none;}
+.link-container ul {
+   display:block;
+}
+.link-container ul li {
+    padding: 10px 15px;
+    width: 100%;
+    border: 2px solid;
+    text-align: left;
+    margin-bottom: 10px;
 }
 section.delivery_feature {
     padding: 40px 0;
@@ -1406,21 +1440,23 @@ span.contact a.email {
 .slider-container .slick-arrow { 
 	display:none;
 }
-.link-container {
-    position: fixed;
-    text-align: center;
-    left: -330px;
-    top: 0;
-    height: 100%;
-    width: 330px;
-    transition: all 0.2s linear;
-    background: #ffffff;
-    padding: 60px 0;
-    z-index: 2;
-    overflow: auto;
-    margin: 0;
-    overflow-x: hidden;
+.delivery-feature-list {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+	flex-wrap: wrap;
 }
-.menu-open .link-container{left: 0;
-        position: fixed;}
+.col-4 {
+	
+    clear:both;
+	
+}
+.delivery-feature-list .col-4 ul li span img {
+    margin:0 auto 15px;
+	max-width: 70px;
+}
+.delivery-feature-list .col-4 ul li:nth-child(n) {
+	text-align:center;
+	padding: 0 15px;
+    display: block;
 }
