--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,6 @@ input.search-submit {
     width: 26px;
     background-image: url(../images/search.png);
     background-repeat: no-repeat;
-    background-color: transparent;
 }
 .user-option{display:none;}
 .user-option > ul {
@@ -998,11 +997,14 @@ ul.feature-block li {
 ul.feature-block li img {
     margin-right: 30px;
 }
+.footer-link-wrapper {
+    display: flex;
+	flex-wrap:wrap;
+}
 .footer-block {
-    float: left;
-    max-width: 17.1%;
+    max-width: 20%;
     width: 100%;
-    margin: 0 15px 25px;
+    padding: 0 15px 25px;
 }
 h5.footer-block-title {
     color: #bf8e58;
@@ -1020,7 +1022,7 @@ h5.footer-block-title {
 .ctr-title h5.footer-block-title {
     display: inline-block;
     background-color: #3a3a3a;
-    padding: 0 15px;
+    padding: 0 35px;
 	margin-bottom:0;
 }
 .ctr-title {
@@ -1047,7 +1049,12 @@ h5.footer-block-title {
 	z-index:-1;
    
 }
-
+.footer-block.area {
+    max-width: 100%;
+}
+.footer-block.area ul {
+    column-count: 5;
+}
 .media-link {
 	font-size:16px;
     display: flex;
@@ -1079,11 +1086,29 @@ h5.footer-block-title {
 }
 .link-container ul li{
 	padding: 0 20px;
+	font-size:20px;
 }
-
+.announcment-bar {   
+    font-size: 14px;
+}
+nav.navigation ul li {
+    padding: 0 20px;
+}
+.cta-btn ul li {
+    padding: 0 5px;
+}
+ul.feature-block li {
+	font-size: 20px;
+}
 }
 
 @media only screen and (max-width:1199px) {
+h1 {
+    font-size: 38px;
+}
+h3 {
+    font-size: 26px;
+}
 .announcment {
 	max-width:100%;
     width: 100%;
@@ -1098,20 +1123,45 @@ h5.footer-block-title {
     text-align: center;
 }
 nav.navigation ul li {
-    padding: 0 15px;
+    padding: 0 10px;
 }
-.cta-btn ul li {
-    padding: 0 5px;
+nav.navigation ul li > a {
+    font-size: 14px;
+}
+.logo {
+    margin: 0 auto;
 }
 .link-container ul li {
-    font-size: 20px;
+    padding: 0 15px;
+    font-size: 18px;
+}
+.product-slider-detail {
+    align-items: center;
 }
 .card .product-detail {
     padding: 12px 0px;
-}		
+}
+.event-content {
+    max-width: 50%;
+    padding-left: 30px;
+}
+.delivery-feature-list .col-4 ul li {
+    font-size: 26px;
+    padding: 0 14px; 
+}
+.delivery-feature-list .col-4 ul li span {
+	display:inline-block;
+    padding: 0 15px;
+}
 ul.feature-block li {
     padding: 20px 10px;
 	font-size: 16px;
+}
+.footer-block ul li > a {
+    font-size: 14px;
+}
+.footer-block {
+    padding: 0 10px 25px;
 }
 }
 
@@ -1257,9 +1307,6 @@ nav.navigation ul li:nth-child(n) {
     padding: 0;
     margin: 50px 0;
 }
-.delivery-feature-list .col-4 ul li span {
-    padding: 0 15px;
-}
 .col-4.delivery-feature-img {
     clear: both;
     display: inline-block;
@@ -1277,17 +1324,26 @@ nav.navigation ul li:nth-child(n) {
 section.toy-product-slider .product-slider-detail {
     flex-flow: column-reverse;
 }
-.footer-block {
-    margin: 0 10px 25px;
-}
 
 @media only screen and (max-width:990px) {
+.feature-card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    margin-top: 50px;
+}
 .best-sell, .events, section.delivery_feature {
     padding: 45px 0;
 }
 section.toy-product-slider {
     padding-bottom: 45px;
 }
+.footer-block {
+    max-width:33.33%;
+}
+.footer-block.area ul{column-count:3;}
 }
 @media only screen and (max-width:767px) {
 body {
@@ -1333,6 +1389,9 @@ p {
 }
 .slide-item .slide-wrapper .slider-header-block {
     max-width: 100%;
+}
+.input-wrapper {
+    width: 320px;
 }
 .slide .slick-arrow {
 		display:none;
@@ -1413,7 +1472,7 @@ footer.site-footer {
     padding: 40px 0 0;	
 }
 .footer-block {
-    margin: 0 8px 20px;
+    padding: 0 8px 20px;
 }
 h5.footer-block-title {
     color: #bf8e58;
@@ -1432,9 +1491,23 @@ ul.feature-block li img {
 .footer-block ul li > a {
     font-size: 12px;
 }
+ul.feature-block {
+    flex-flow: column;
+}
+ul.feature-block li {
+    max-width: 100%;
+    padding: 15px 10px;
+    margin-bottom: 10px;
+}
+.copywrite {
+    margin-top: 5px;
+    order: 1;
+}	
 .media-link {
+	flex-direction: column;
+    text-align: center;
 	margin-top: 10px;
-    font-size: 12px;
+    font-size: 14px;
 }
 }
 @media only screen and (max-width:479px) {
@@ -1460,6 +1533,10 @@ span.contact a.email {
     height: 24px;
     width: 24px;
 }
+.slide-side-img {
+    max-width: 100%;
+    margin-bottom: 40px;
+}
 .slider-container .slick-arrow { 
 	display:none;
 }
@@ -1470,9 +1547,7 @@ span.contact a.email {
 	flex-wrap: wrap;
 }
 .col-4 {
-	
     clear:both;
-	
 }
 .delivery-feature-list .col-4 ul li span img {
     margin:0 auto 15px;
@@ -1497,17 +1572,9 @@ span.contact a.email {
     margin-top: -25px;
 }
 .footer-block {
-    margin: 0 8px 15px;
+    padding: 0 8px 15px;
 	float:none;
 	max-width:100%;
-}
-ul.feature-block {
-    flex-flow: column;
-}
-ul.feature-block li {
-	max-width:100%;
-    padding: 15px 10px;
-	margin-bottom: 10px;
 }
 .footer-block ul {display:none;}
 .show{display:block !important;}
@@ -1565,5 +1632,47 @@ h5.footer-block-title:not(:last-child):after {
 .area ul li{
 	padding:0 5px;
 }
-
+.media-link {
+    font-size:12px;
+}
+}
+@media only screen and (max-width : 320px) {
+h1 {
+    font-size: 25px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 20px;
+}
+.logo {
+    max-width: 105px;
+}
+.slide-wrapper .slider-header-block h1 {
+    margin-bottom: 15px;
+}
+.product-slider {
+    padding: 0 0 20px;
+}
+.slide-side-img {
+    max-width: 100%;
+    margin-bottom: 30px;
+}
+.side-img-content {
+ 
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
+}
+section.delivery_feature {
+    padding: 20px 0;
+}
+.delivery-feature-list .col-4 ul li {
+    font-size: 14px;
+    margin: 15px 0;
+}
+.delivery-feature-list .col-4 ul li:nth-child(1) {
+    margin-top: 15px;
+}
 }
